# fastapi-t

./: .gitignore  Dockerfile  Makefile  README.md  a.js  aerich.ini  ddd.toml  docker-compose.yml  pyproject.toml  setup.cfg  tasks.md  v.json
fast_tmp/: amis_router.py  depends.py  factory.py  models.py  templates_app.py
fast_tmp/amis/: utils.py
fast_tmp/amis/schema/: __init__.py  abstract_schema.py  actions.py  button.py  crud.py  enums.py  form.py  list.py  page.py  t.py  widgets.py
fast_tmp/amis/schema/forms/: __init__.py  switch.py  widgets.py
fast_tmp/api/: auth.py  auth2.py
fast_tmp/apps/api/: auth.py
fast_tmp/conf/: __init__.py  global_settings.py
fast_tmp/core/: admin.py  amis_app.py  amis_router.py  filter.py  mixins.py
fast_tmp/models/: __init__.py  enums.py
fast_tmp/schema/: __init__.py  mixin_schema.py  openapi.py  response.py
fast_tmp/templates/admin/: base.html  crud.html  t.html
fast_tmp/utils/: model.py  openapi.py  password.py
migrations/models/: 0_20201224160109_init.sql  0_20201224170814_init.sql  1_20201224162531_update.sql
src/: __init__.py  common.py  factory.py  main.py  models.py  schemas.py  settings.py  views.py
src/apps/api/: __init__.py
src/apps/api/routes/: __init__.py  amis_html.py  t1.py
src/apps/docs/: __init__.py
src/enums/: __init__.py
src/templates/: base.html  changelog.html  enums.html  errors.html  models.html  sign.html
tests/: test_fastapi_tortoise.py  test_metaclass.py  test_oauth2.py  test_oauth2scope.py  test_schema.py  test_tortoise.py
