[tool.poetry]
name = "fastapi-tortoise"
version = "0.1.0"
description = ""
authors = ["Chise1 <chise123@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi="*"
python-jose = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
