[tool.poetry]
name = "fastapi-t"
version = "0.1.0"
description = ""
authors = ["Chise1 <chise123@live.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "*"
tortoise-orm = "*"
aerich = "*"
python-multipart = "^0.0.5"
rearq = "^0.1.3"
fastapi-admin = "^0.3.2"
python-jose = "*"
#fast-tmp= {git = "https://github.com/Chise1/fast-tmp.git"}

aiofiles = "^0.6.0"
[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pytest-asyncio = "*"
asynctest = "*"
bandit = "*"
pylint = "^2.6.0"

[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
